<resources>
    <!-- Strings related to login -->
    <string name="signout">Sign out</string>
    <string name="signin">Sign in</string>
    <string name="signed_in_message">Signed in successfully</string>
    <string name="signed_out_message">Signed out</string>
    <string name="sign_in_required">You must be signed in!</string>

    <string name="user_have_wireless_points">You have %1$s wireless points</string>
    <string name="user_renew_map">Renew map access</string>
    <string name="user_access_date">You have access until %1$s</string>
    <string name="user_cost_per_month">%1$s wireless points per month</string>
    <string name="user_renew_personal_map">Renew personal map</string>
    <string name="user_not_enough_wp">You don\'t have enough wireless points</string>

    <string name="error_no_internet">Internet is unavailable</string>
</resources>
