<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        style="@style/SettingsItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/setting_item_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sign_in_message"
        style="@style/SettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet_connection_required"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/signed_in_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/signed_in_server_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/wireless_points"
                style="@style/SettingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_have_wireless_points"/>

            <LinearLayout
                android:id="@+id/layout_map_access"
                style="@style/SettingsItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    style="@style/SettingsTextNoParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/setting_item_padding"
                    android:paddingTop="@dimen/setting_item_padding"
                    android:text="@string/user_renew_map"/>

                <TextView
                    style="@style/SettingsTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_cost_per_month"/>

                <TextView
                    android:id="@+id/textview_map_access_time"
                    style="@style/SettingsTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_access_date"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_user_map_access"
                style="@style/SettingsItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    style="@style/SettingsTextNoParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/setting_item_padding"
                    android:paddingTop="@dimen/setting_item_padding"
                    android:text="@string/user_renew_personal_map"/>

                <TextView
                    style="@style/SettingsTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_cost_per_month"/>

                <TextView
                    android:id="@+id/textview_personal_map_access_time"
                    style="@style/SettingsTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_access_date"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/sign_out_button"
            style="@style/SettingsButton"
            android:backgroundTint="@color/color_accent"
            android:text="@string/signout"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>